--- a/content/hey/index.mdx
+++ b/content/hey/index.mdx
@@ -1,5 +1,12 @@
+---
+title: All Fruits
+sidebarTitle: 🍒 Fruits
+asIndexPage: true
+---
+
 import { Steps } from 'nextra/components'
- 
+
+
 ## تست
  
 متن 
@@ -11,4 +18,21 @@ import { Steps } from 'nextra/components'
 ### مرحله ۲
  
 متن
+
+### مرحله ۳
+ 
+متن
+
+### مرحله ۴
+ 
+متن
+
+### مرحله ۵
+ 
+متن
+
+### مرحله ۶
+ 
+متن
+
 </Steps>
