--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,16 +1,23 @@
 ---
-title: شروع به کار 🚀
-sidebarTitle: شروع به کار 🚀
+title: مستندات اپ‌ادیتور
+description: Get started building your docs site with Starlight.
+tableOfContents: false
+lastUpdated: false
+pagefind: false
+hero:
+  tagline: ساخت اپلیکیشن موبایل بدون نیاز به برنامه‌نویسی
+  image:
+    light: ../../assets/light.svg
+    dark: ../../assets/dark.svg
+  actions:
+    - text: شروع کنید
+      link: /overview/introduction
+      icon: left-arrow
+    - text: ورود به پنل
+      link: https://panel.appeditor.ir
+      icon: rocket
+      variant: minimal
+      attrs:
+        target: _blank
 ---
 
-## معرفی اپ ادیتور
-
-اپ‌ادیتور، پلتفرمی است که بدون حتی یک خط کد، به شما این امکان را می‌دهد که بهترین اپ‌های موبایل را از صفر تا صد طراحی کنید و خروجی بگیرید.
-
-وقتی حرف از طراحی اپ می‌زنیم، به این معناست که اپ‌ها، محدود به قالب‌های از پیش تعیین‌شده نیستند و این خود شما هستید که مثل یک طراح حرفه‌ای، صفر تا صد رابط‌کاربری اپ‌تان را دیزاین می‌کنید.
-
-جدای از این‌ها، قالب‌های از پیش طراحی‌شده‌ای هم وجود دارند، که می‌توانید از آن‌ها استفاده و قسمت‌های مختلف‌شان را با سلیقه خودتان، بازطراحی و شخصی‌سازی کنید.
-
-علاوه بر صفحه‌ساز قدرتمند، ساخت اپ‌ها به‌وسیله تکنولوژی بومی موبایل صورت می‌گیرد که تماماً توسط گوگل، یعنی سازنده سیستم‌عامل اندروید، توسعه یافته. بنابراین، در ساخت اپ‌های شما، از کدهای وب و HTML استفاده نمی‌شود و خروجی‌ها، کاملاً native است.
-
-حتی این امکان در اپ‌ادیتور فراهم است که سورس‌کد فلاتر اپلیکیشن‌تون رو دریافت کنید و برای پیاده‌سازی ویژگی‌های پیچیده، اون رو به یک برنامه‌نویس بسپارید.
