--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: مستندات اپ‌ادیتور
+title: خانه
 description: Get started building your docs site with Starlight.
 tableOfContents: false
 lastUpdated: false
