--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,23 +1,32 @@
 ---
 title: خانه
-description: Get started building your docs site with Starlight.
-tableOfContents: false
-lastUpdated: false
-pagefind: false
-hero:
-  tagline: ساخت اپلیکیشن موبایل بدون نیاز به برنامه‌نویسی
-  image:
-    light: ../../assets/light.svg
-    dark: ../../assets/dark.svg
-  actions:
-    - text: شروع کنید
-      link: /overview/introduction
-      icon: left-arrow
-    - text: ورود به پنل
-      link: https://panel.appeditor.ir
-      icon: rocket
-      variant: minimal
-      attrs:
-        target: _blank
 ---
 
+import { Cards } from 'nextra/components'
+ 
+<Cards>
+  <Cards.Card
+    title="در یک نگاه"
+    href="/overview"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/tabs"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+</Cards>
