--- a/content/overview/index.mdx
+++ b/content/overview/index.mdx
@@ -3,3 +3,40 @@ title: در یک نگاه
 sidebarTitle: در یک نگاه
 asIndexPage: true
 ---
+
+import { Cards } from 'nextra/components'
+
+‌
+
+<Cards.Card
+  title="بازگشت به خانه"
+  href="/"
+  arrow
+/>
+
+<Cards>
+  <Cards.Card
+    title="در یک نگاه"
+    href="/overview"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/tabs"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+  <Cards.Card
+    title="تست"
+    href="/docs/built-ins/steps"
+  />
+</Cards>
