--- a/content/services/in-app-payment/markets/cafebazaar.mdx
+++ b/content/services/in-app-payment/markets/cafebazaar.mdx
@@ -1,5 +1,5 @@
 ---
-title: پرداخت درون برنامه‌ای کافه بازار
+title: کافه بازار
 description: آموزش پیاده سازی پرداخت درون برنامه ای کافه بازار در اپلیکیشن | برنامه ساز اپ ادیتور
 ---
 
