--- a/content/services/in-app-payment/markets/myket.mdx
+++ b/content/services/in-app-payment/markets/myket.mdx
@@ -1,5 +1,5 @@
 ---
-title: پرداخت درون برنامه‌ای مایکت
+title: مایکت
 description: آموزش پیاده سازی پرداخت درون برنامه ای کافه مایکت در اپلیکیشن | برنامه ساز اپ ادیتور
 ---
 
