--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,7 +3,11 @@ title: خانه
 ---
 
 import { Cards } from 'nextra/components'
- 
+import { Bleed } from 'nextra/components'
+
+
+<video id="player" playsInline controls source src="https://help.appeditor.ir/assets/cafebazaar-01.mp4" type="video/mp4"/>
+
 <Cards>
   <Cards.Card
     title="در یک نگاه"
